added view and edit row template

--- a/templates/task_input_tmpl.html
+++ b/templates/task_input_tmpl.html
@@ -1,10 +1,48 @@
-{{block "task-name" .}}
-<input
-  id="task_input_{{.Id}}"
-  autofocus
-  type="text"
-  value="{{.Task}}"
-  class="form-control"
-  required
-/>
-{{end}}
+{{range .Todos}} {{block "todo-list-row" .}}
+<tr id="tr_{{.Id}}">
+  <td style="width: 30px">
+    <input
+      id="cb_{{.Id}}"
+      type="checkbox"
+      hx-put="/update-todo/{{.Id}}"
+      class="form-check-input"
+      disabled
+      {{if
+      .Done}}
+      checked
+      {{end}}
+    />
+  </td>
+  <td>
+    <input
+      id="task_input_{{.Id}}"
+      autofocus
+      type="text"
+      value="{{.Task}}"
+      class="form-control"
+      required
+    />
+  </td>
+
+  <td class="text-end" style="width: 250px">
+    <button
+      id="btn_save_{{.Id}}"
+      hx-get="/save-task/{{.Id}}"
+      hx-swap="outerHTML"
+      class="btn btn-primary"
+      hx-target="#tr_{{.Id}}"
+    >
+      Save
+    </button>
+    <button
+      id="btn_{{.Id}}"
+      hx-delete="/cancel-edit/{{.Id}}"
+      hx-swap="outerHTML"
+      class="btn btn-danger"
+      hx-target="#tr_{{.Id}}"
+    >
+      Cancel
+    </button>
+  </td>
+</tr>
+{{end}} {{ end }}
