--- a/templates/task_input_tmpl.html
+++ b/templates/task_input_tmpl.html
@@ -1,4 +1,5 @@
 {{range .Todos}} {{block "todo-list-row" .}}
+
 <tr id="tr_{{.Id}}">
   <td style="width: 30px">
     <input
@@ -21,19 +22,22 @@
       value="{{.Task}}"
       class="form-control"
       required
+      name="task"
     />
   </td>
-
   <td class="text-end" style="width: 250px">
     <button
-      id="btn_save_{{.Id}}"
-      hx-get="/save-task/{{.Id}}"
+      hx-post="/save-edit/{{.Id}}"
       hx-swap="outerHTML"
-      class="btn btn-primary"
       hx-target="#tr_{{.Id}}"
+      hx-include="closest tr"
+      id="btn_save_{{.Id}}"
+      type="submit"
+      class="btn btn-primary"
     >
       Save
     </button>
+
     <button
       id="btn_{{.Id}}"
       hx-delete="/cancel-edit/{{.Id}}"
@@ -45,4 +49,5 @@
     </button>
   </td>
 </tr>
+
 {{end}} {{ end }}
