--- a/templates/task_input_tmpl.html
+++ b/templates/task_input_tmpl.html
@@ -37,7 +37,7 @@
 
     <button
       id="btn_cancel_{{.Id}}"
-      hx-get="/cancel-edit/{{.Id}}"
+      hx-get="/cancel-update/{{.Id}}"
       hx-swap="outerHTML"
       class="btn btn-danger"
       hx-target="#tr_{{.Id}}"
