--- a/templates/task_view_tmpl.html
+++ b/templates/task_view_tmpl.html
@@ -21,7 +21,7 @@
   <td class="text-end" style="width: 250px">
     <button
       id="btn_edit_{{.Id}}"
-      hx-get="/edit-task/{{.Id}}"
+      hx-get="/start-update/{{.Id}}"
       hx-swap="outerHTML"
       class="btn btn-primary"
       hx-target="#tr_{{.Id}}"
