--- a/templates/task_view_tmpl.html
+++ b/templates/task_view_tmpl.html
@@ -18,7 +18,7 @@
     </label>
   </td>
 
-  <td class="text-end" style="width: 250px">
+  <td class="text-end d-print-none" style="width: 250px">
     <button
       id="btn_edit_{{.Id}}"
       hx-get="/start-update/{{.Id}}"
